--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,8 @@ button {
     font-weight: 200;
     padding-bottom: 1px;
     margin-right: 25px;
+    background-color: #f9f9f9;
+    border-radius: 5px;
 }
 
 button: last-child {
@@ -163,4 +165,9 @@ button: last-child {
     float: right;
     width: 30%;
     text-align: left;
+}
+
+textarea:focus,
+input:focus {
+  outline: none;
 }
